--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,6 +15,7 @@
     <ul class="nav navbar-nav navbar-right">
       <li><%= link_to "Home", root_path %></li>
       <li><%= link_to "About", about_path %></li> 
+      <li><a href="http://www.twitter.com/thefaunadex", target="_blank">@thefaunadex</a></li>
     </ul>
   </div><!-- /.navbar-collapse -->
 </nav>
