--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="#">FAUNADEX</a>
+    <%= link_to "FAUNADEX", root_path, :class=>"navbar-brand"%>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
