add app store button & edit about

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,6 @@
-This real life pokedex is a digital encyclopedia created by as an invaluable tool for humans to better understand the creatures on Earth.
+This real life pokedex is a digital encyclopedia created as an invaluable tool for humans to better understand the creatures on Earth.
 <br><br>
-The faunadex gives information about all organisms in the world that are contained in its database, although it differs in how it acquires and presents information over the different media. 
+The faunadex gives information about all organisms in the world that are contained in its database.
 <br><br>
 However, faunadexes are only given to a few Explorers at a time, generally to the ones that are felt to have exceptional potential and skill. 
 <br><br>
