--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,7 @@
 <div class="jumbotron">
+	<center>
 	<h1>FAUNADEX</h1>
-	pokédex for real life <%= link_to "Join", "#", class: "btn btn-primary" %>
+	<p>pokédex for real life</p>
+	<%= link_to image_tag("app_store_badge.svg") %>
+</center>
 </div>
