--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,19 +1,19 @@
 <nav class="navbar navbar-default" role="navigation">
   <!-- Brand and toggle get grouped for better mobile display -->
-  <div class="navbar-header">
+  <div class="navbar-footer">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
       <span class="sr-only">Toggle navigation</span>
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <%= link_to "FAUNADEX", root_path, :class=>"navbar-brand"%>
+    <%= link_to "© 2014 Faunadex", root_path, :class=>"navbar-brand"%>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse navbar-ex1-collapse">
     <ul class="nav navbar-nav navbar-right">
-      <li><%= link_to "Home", root_path %></li>
+      <li><a href="http://isitpoisonouscanieatit.tumblr.com", target="_blank">Blog</a></li>
       <li><%= link_to "About", about_path %></li> 
       <li><a href="http://www.twitter.com/thefaunadex", target="_blank">@thefaunadex</a></li>
     </ul>
