--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -3,11 +3,12 @@
 .jumbotron {
 	margin-bottom: 0px;
 	
-	background-image: url('/assets/plant_cell_plasmolysis.jpg');
+	background-image: url('/assets/plant_cell.jpg');
 	background-position: 0% 25%;
   background-size: cover;
   background-repeat: no-repeat;
   color: white;
-  text-shadow: black 0.3em 0.3em 0.3em;
+  text-shadow: black 0.1em 0.1em 0.1em;
 }
+
 
