--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,6 +2,10 @@
 	<center>
 	<h1>FAUNADEX</h1>
 	<p>pokédex for real life</p>
+	</center>
+	Faunadexes are only given to a few Explorers at a time, generally to the ones that are felt to have exceptional potential and skill. <br>
+	<center>
 	<%= link_to image_tag("app_store_badge.svg") %>
+
 </center>
 </div>
