--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -5,7 +5,7 @@
 		font-size:10px;
 	}
 	margin-bottom: 0px;
-	background-image: url('../assets/plant_cell.jpg');
+	background-image: url('/assets/plant_cell.jpg');
 	background-position: 0% 25%;
   background-size: cover;
   background-repeat: no-repeat;
