--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -13,7 +13,7 @@
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse navbar-ex1-collapse">
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="http://isitpoisonouscanieatit.tumblr.com", target="_blank">Blog</a></li>
+      <li><a href="http://blog.faunadex.com", target="_blank">Blog</a></li>
       <li><%= link_to "About", about_path %></li> 
       <li><a href="http://www.twitter.com/thefaunadex", target="_blank">@thefaunadex</a></li>
     </ul>
