--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -16,6 +16,11 @@
       <li><a href="http://blog.faunadex.com", target="_blank">Blog</a></li>
       <li><%= link_to "About", about_path %></li> 
       <li><a href="http://www.twitter.com/thefaunadex", target="_blank">@thefaunadex</a></li>
+      <% if user_signed_in? %>
+        <li> <%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
+      <% else %>
+        <%= link_to "Sign in", new_user_session_path %></li>
+      <% end %>
     </ul>
   </div><!-- /.navbar-collapse -->
 </nav>
