--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
 
 
 	<%= yield %>
+	<% flash.each do |name, msg| %>
+		<%= content_tag(:div, msg, class: "alert alert-info") %>
+	<% end %>
 
 <%= render 'layouts/footer' %>
 </body>
