--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,18 @@
-<div class="jumbotron">
-	<center>
+<div class="jumbotron center">
+
 	<h1>FAUNADEX</h1>
 	<p>pokédex for real life</p>
 	</center>
 	Faunadexes are only given to a few Explorers at a time, generally to the ones that are felt to have exceptional potential and skill. <br>
-	<center>
+	<% if user_signed_in? %>
+		# do something
+	<% else %>
+	<p>
+		<%= link_to "Log in", new_user_session_path, class: "btn btn-default btn-lg" %>
+		<%= link_to "Sign up", new_user_registration_path, class: "btn btn-primary btn-lg" %>
+	</p>
+	<% end %>
+
 	<%= link_to image_tag("app_store_badge.svg") %>
 
 </center>
