--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,18 +1,29 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+<center>
+<h5>Faunadexes are only given to a few Explorers at a time, generally to the ones that are felt to have exceptional potential and skill. </h5>
+<h2>Do you have what it takes?</h2>
+<div class="panel-body">
+	<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
+  <div class="form-group">
+  	<%= f.label :email %><br />
+  	<%= f.email_field :email, :autofocus => true, class: "form-control" %>
+  </div>
 
-  <div><%= f.label :password %><br />
-  <%= f.password_field :password %></div>
+  
+  <div class="form-group">
+  	<%= f.label :password %><br />
+  	<%= f.password_field :password, class: "form-control" %>
+	</div>
 
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
 
-  <div><%= f.submit "Sign up" %></div>
+  <div class="form-group">
+  	<%= f.submit "Sign up", class: "btn btn-primary" %></div>
+  </div>
 <% end %>
+</div>
 
-<%= render "devise/shared/links" %>
+<div class="panel-footer">
+	<%= render "devise/shared/links" %>
+</div>
+</center>
