--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -18,6 +18,7 @@
       <li><a href="http://www.twitter.com/thefaunadex", target="_blank">@thefaunadex</a></li>
       <% if user_signed_in? %>
         <li> <%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
+        <li><%= link_to "Account Settings", edit_user_registration_path %></li>
       <% else %>
         <%= link_to "Sign in", new_user_session_path %></li>
       <% end %>
