--- a/app/views/plants/_form.html.erb
+++ b/app/views/plants/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@plant) do |f| %>
+<%= form_for @plant, html: {multipart: true } do |f| %>
   <% if @plant.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@plant.errors.count, "error") %> prohibited this plant from being saved:</h2>
@@ -11,9 +11,9 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :description %><br>
-    <%= f.text_field :description, class: "form-control" %>
+  <div class="form-group">
+    <%= f.label :image %>
+    <%= f.file_field :image, class: "form-control"%>
   </div>
   <div class="form-group">
     <%= f.submit class: "btn btn-primary"%>
